@@ -58,100 +58,16 @@
 	[super dealloc];
 }
 
-// XXX
-// XXX: All subclasses of ParticleSystem share this code
-// XXX: so some parts of this coded should be moved to the base class
-// XXX
-// XXX: BUT the change shall NOT DROP a single FPS
-// XXX:
--(void) step: (ccTime) dt
+-(void) updateQuadWithParticle:(Particle*)p position:(CGPoint)newPos
 {
-	if( active && emissionRate ) {
-		float rate = 1.0f / emissionRate;
-		emitCounter += dt;
-		while( particleCount < totalParticles && emitCounter > rate ) {
-			[self addParticle];
-			emitCounter -= rate;
-		}
-		
-		elapsed += dt;
-		if(duration != -1 && duration < elapsed)
-			[self stopSystem];
-	}
-	
-	particleIdx = 0;
-	
-	CGPoint absolutePosition;
-	if( positionType_ == kPositionTypeFree )
-		absolutePosition = [self convertToWorldSpace:CGPointZero];
-	
-	while( particleIdx < particleCount )
-	{
-		Particle *p = &particles[particleIdx];
-		
-		if( p->life > 0 ) {
-			
-			CGPoint tmp, radial, tangential;
-						
-			radial = CGPointZero;
-			// radial acceleration
-			if(p->pos.x || p->pos.y)
-				radial = ccpNormalize(p->pos);
-			tangential = radial;
-			radial = ccpMult(radial, p->radialAccel);
-			
-			// tangential acceleration
-			float newy = tangential.x;
-			tangential.x = -tangential.y;
-			tangential.y = newy;
-			tangential = ccpMult(tangential, p->tangentialAccel);
-			
-			// (gravity + radial + tangential) * dt
-			tmp = ccpAdd( ccpAdd( radial, tangential), gravity);
-			tmp = ccpMult( tmp, dt);
-			p->dir = ccpAdd( p->dir, tmp);
-			tmp = ccpMult(p->dir, dt);
-			p->pos = ccpAdd( p->pos, tmp );
-			
-			p->color.r += (p->deltaColor.r * dt);
-			p->color.g += (p->deltaColor.g * dt);
-			p->color.b += (p->deltaColor.b * dt);
-			p->color.a += (p->deltaColor.a * dt);
-			
-			p->size += (p->deltaSize * dt);
-			p->size = MAX( 0, p->size );
-			
-			p->life -= dt;
-			
-			//
-			// update values in point
-			//
-			CGPoint	newPos = p->pos;
-			if( positionType_ == kPositionTypeFree ) {
-				newPos = ccpSub(absolutePosition, p->startPos);
-				newPos = ccpSub( p->pos, newPos);
-			}
-			
-			// place vertices and colos in array
-			vertices[particleIdx].pos = newPos;
-			vertices[particleIdx].size = p->size;
-			vertices[particleIdx].colors = p->color;
+	// place vertices and colos in array
+	vertices[particleIdx].pos = newPos;
+	vertices[particleIdx].size = p->size;
+	vertices[particleIdx].colors = p->color;
+}
 
-			// update particle counter
-			particleIdx++;
-			
-		} else {
-			// life < 0
-			if( particleIdx != particleCount-1 )
-				particles[particleIdx] = particles[particleCount-1];
-			particleCount--;
-			
-			if( particleCount == 0 && autoRemoveOnFinish_ ) {
-				[self unschedule:@selector(step:)];
-				[[self parent] removeChild:self cleanup:YES];
-			}
-		}
-	}
+-(void) postStep
+{
 	glBindBuffer(GL_ARRAY_BUFFER, verticesID);
 	glBufferData(GL_ARRAY_BUFFER, sizeof(ccPointSprite)*particleCount, vertices,GL_DYNAMIC_DRAW);
 	glBindBuffer(GL_ARRAY_BUFFER, 0);
